# cav-bench

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISION_LOG.md  GITHUB_ISSUES.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  scenario_proposal.md
.github/workflows/: ci.yml
docs/: adapter-authoring.md  architecture.md  citation.md  commerce-v1-profile.md  framework-adapter-brief.md  langgraph-adapter-mapping.md  methodology.md  release-process.md  reproducibility.md  scenario-authoring.md
docs/design/: commerce-v1-profile.md  follow-up-release.md  future-workstreams-index.md  generic-protocol-integration.md  hidden-failure-discovery.md  improvement-case-study.md  independent-validation-run.md
docs/diagrams/: architecture-roadmap.md  dependency-graph.md  future-system-architecture.md  milestone-map.md  program-gantt.md  release-and-adoption-gates.md  validation-evidence-lifecycle.md  workstream-dependency-map.md
docs/program/: external-evidence-policy.md  fable-execution-contract.md  gate-state.md  implementation-issue-specifications.md  implementation-manifest.md  pr-and-branch-strategy.md  resume-and-recovery-protocol.md
docs/program/approvals/: M-COM-V1.md  M-GPI-1.md  M-IVT-1.md  README.md
docs/program/gateway/: architecture.md  candidate-integration.md  envelope.md  rest-mapping.md
docs/prompts/: claude-code-prompts.md
docs/strategy/: 14-day-validation-sprint.md  90-day-engineering-program.md  adoption-and-validation-tracking.md
examples/: __init__.py  ci_threshold.sh  custom_adapter.py  gateway_rest_demo.py  langgraph_adapter.py
examples/custom_scenario_pack/: README.md  pack.json
examples/reference_candidate/: __init__.py  client.py  driver.py
planning/: 00_READ_ME_FIRST.md  ACCEPTANCE_CHECKLIST.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  TECHNICAL_DESIGN.md
scripts/: build_core_v1_pack.py
src/cavbench/: __init__.py  api.py  cli.py  config.py  errors.py  manifest.py  runner.py  util.py  version.py
src/cavbench/adapters/: __init__.py  (+3 more)
tests/: helpers.py
tests/cli/: test_cli_smoke.py
tests/commerce/: _meta.py  test_commerce_v1_docs_mapping.py  test_commerce_v1_pack.py
tests/contract/: test_adapter_session_boundary.py  test_evaluator_independence.py  test_gateway_capability_consistency.py  test_gateway_capability_discovery.py  test_gateway_capability_enforcement.py  test_gateway_capability_immutability.py  test_gateway_forged_report.py  test_gateway_neutrality.py  test_gateway_rest_concurrency.py  test_langgraph_adapter_contract.py  test_langgraph_adapter_skeleton.py  test_scenario_schema.py
tests/golden/: test_canonical_ablation.py  test_commerce_v1_ablation.py
tests/integration/: test_dimension_behaviors.py  test_extensibility.py  test_full_matrix_and_determinism.py  test_gateway_determinism.py  test_gateway_hazards.py  test_replay_equivalence.py
tests/langgraph/: conftest.py  helpers.py  test_determinism.py  test_identifiers_retry_resume.py  test_runtime_scenarios.py  test_trust_boundary.py
tests/unit/: test_decision_log.py  test_faults.py  test_gateway_bind.py  test_gateway_capabilities_model.py  test_gateway_envelope.py  test_gateway_extras_isolation.py  test_gateway_rest.py  test_gateway_rest_lifecycle.py  test_gateway_session_log.py  test_ledger.py  test_metrics.py  test_predicates.py  test_state_store.py
(+103 files in other folders)
