[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cav-bench"
version = "1.0.0"
description = "Benchmark for Commit-Time Action Validity in consequential AI-agent actions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Nixalkumar Patel" }
]
keywords = [
  "benchmark",
  "ai-agents",
  "evaluation",
  "tool-use",
  "reliability",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "jsonschema>=4,<5",
]

[project.optional-dependencies]
reporting = ["pandas>=2", "matplotlib>=3"]
# Only needed to actually run LangGraphAdapter; never required to import
# cavbench or run the core benchmark. Floor = first release with the
# durability= invoke argument used by the adapter; both ends of the range
# are exercised in tests (docs/langgraph-adapter-mapping.md).
langgraph = ["langgraph>=0.6,<2"]
# The M-GPI-1 REST protocol gateway frontend is standard-library-only
# (http.server) -- see docs/design/generic-protocol-integration.md open
# question 4 and DECISION_LOG.md D-009/D-021. This extra is empty today,
# reserving the `cav-bench[rest]` install spelling documented for the
# gateway (docs/program/gateway/architecture.md) and matching the isolation
# pattern the `reporting` extra already establishes: `cavbench.gateway` is
# never imported by importing plain `cavbench`.
rest = []
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.11",
  "build>=1.2",
]

[project.urls]
Homepage = "https://github.com/Harimay23/cav-bench"
Issues = "https://github.com/Harimay23/cav-bench/issues"

[project.scripts]
cavbench = "cavbench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cavbench"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/examples",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src", "."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# UP017: datetime.UTC is 3.11+-only; timezone.utc works identically on every
# supported version and is kept deliberately so the codebase is also
# exercisable on older interpreters during development.
ignore = ["UP017"]

[tool.ruff.lint.per-file-ignores]
# One-time scenario-authoring script: long declarative dict literals (one
# scenario per entry) are more readable unwrapped than force-wrapped.
"scripts/build_core_v1_pack.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
# jsonschema has no bundled type stubs. matplotlib/pandas (optional
# `reporting` extras) are ignored inline at their single import site instead.
# langgraph is an optional extra imported only lazily; core type-checking
# must succeed without it installed.
module = ["jsonschema", "jsonschema.*", "langgraph", "langgraph.*"]
ignore_missing_imports = true
